tests/ui/transmutability/unions/should_pad_variants.stderr
error[E0277]: `Src` cannot be safely transmuted into `Dst`
  --> $DIR/should_pad_variants.rs:43:36
   |
LL |     assert::is_transmutable::<Src, Dst>();
   |                                    ^^^ the size of `Src` is smaller than the size of `Dst`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_pad_variants.rs:13:14
   |
LL |       pub fn is_transmutable<Src, Dst>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
